bug fixes: update word count and seperator character. hopefully fixed focus issues on mobile, too

--- a/index.css
+++ b/index.css
@@ -102,6 +102,7 @@ input[type="number"]::-webkit-outer-spin-button {
 }
 
 input[type="number"] {
+  appearance: textfield;
   -moz-appearance: textfield;
   width: 2rem;
   text-align: end;
